add test handler to create test swagger endpoints
